# personal-sphinx-test

./: .gitignore  .readthedocs.yaml  .replit  Makefile  README.md  changelog.rst  conf.py  hi.py  index.rst  pyproject.toml  replit.nix  requirements.txt
.github/: dependabot.yml
.github/workflows/: sphinx.yml
_build/: .buildinfo  README.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/.doctrees/: changelog.doctree  environment.pickle  index.doctree
_build/.doctrees/cheesey/: cheese.doctree
_build/.doctrees/cheesey/docs/: about.doctree  examples.doctree  progress.doctree
_build/.doctrees/docs/: about.doctree  examples.doctree  progress.doctree  test.doctree  todo.doctree
_build/.doctrees/idk/: cheese.doctree  modules.doctree
_build/.doctrees/lol/: idk.doctree
_build/_sources/: README.md.txt  changelog.rst.txt  index.rst.txt
_build/_sources/cheesey/: cheese.rst.txt
_build/_sources/cheesey/docs/: progress.rst.txt
_build/_sources/docs/: about.rst.txt  progress.rst.txt  test.rst.txt  todo.rst.txt
_build/_sources/idk/: cheese.rst.txt
_build/_sources/lol/: idk.rst.txt  modules.rst.txt  random.rst.txt
_build/cheesey/: cheese.html  modules.html
_build/cheesey/docs/: about.html  examples.html  progress.html
_build/docs/: about.html  examples.html  hi.html  progress.html  test.html  todo.html
_build/doctrees/: README.doctree  changelog.doctree  environment.pickle  index.doctree
_build/doctrees/cheesey/: cheese.doctree  modules.doctree
_build/doctrees/docs/: about.doctree  hi.doctree  progress.doctree  test.doctree
_build/doctrees/lol/: idk.doctree  modules.doctree  random.doctree
_build/html/: .buildinfo  README.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_sources/: README.md.txt  changelog.rst.txt  index.rst.txt
_build/html/cheesey/: cheese.html  modules.html
_build/html/docs/: about.html  examples.html  hi.html  progress.html  test.html
_build/html/lol/: idk.html  modules.html  random.html
_build/idk/: cheese.html  modules.html
_build/lol/: idk.html  modules.html  random.html
cheese/: __init__.py  cheese.py
docs/: about.rst  changelog.rst  progress.rst  requirements.txt
idk/: idk.py
source/doctrees/: environment.pickle
source/doctrees/docs/: about.doctree  progress.doctree
source/html/: .buildinfo  changelog.html  search.html  searchindex.js
(+13 files in other folders)
