[tool.poetry]
name = "spersonal-sphinx-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
furo = "^2021.9.22"
sphinx-copybutton = "^0.4.0"
sphinx-inline-tabs = "^2021.8.17-beta.10"
sphinxext-opengraph = "^0.4.2"
myst-parser = "^0.15.2"
Babel = "^2.9.1"
docutils = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
