[tool.poetry]
name = "Personal-sphinx-test"
version = "1.0.0"
description = "Simple sphinx testing"
authors = ["Dragonlord1005"]
license = "MIT"
documentation = "https://dragonlord1005.github.io/personal-sphinx-test"
packages = [
  { include = "cheese" },
]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
furo = "^2021.9.22"
sphinx-copybutton = "^0.4.0"
sphinx-inline-tabs = "^2021.8.17-beta.10"
sphinxext-opengraph = "^0.4.2"
myst-parser = "^0.15.2"
poethepoet = "^0.10.0"
sphinx-rtd-theme = "^1.0.0"
releases = "^1.6.3"

[tool.poetry.dev-dependencies]

[tool.poe.tasks]
replitrun = "sphinx-autobuild . _build --port=3000 --host=0.0.0.0"
run = "sphinx-autobuild . _build -a"

# Will need to change if sphinx removes makefile
build = "make html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
