[tool.poetry]
name = "Personal-sphinx-test"
version = "1.1.0"
description = "Simple sphinx testing"
authors = ["Dragonlord1005"]
license = "MIT"
documentation = "https://dragonlord1005.github.io/personal-sphinx-test"
packages = [
  { include = "cheese" },
]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.0"
sphinx-inline-tabs = "^2022.1.2b11"
sphinxext-opengraph = "^0.6.1"
sphinx-rtd-theme = "^1.0.0"
releases = "^1.6.3"
six = "^1.16.0"
sphinxcontrib-httpdomain = "^1.8.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.14.0"

[tool.poe.tasks]
replitrun = "sphinx-autobuild . _build --port=3000 --host=0.0.0.0 -a"
run = "sphinx-autobuild . _build -a"

# Will need to change if sphinx removes makefile
build = "make html"
lbuild = { "shell" = "clear & make html" }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
